syntax = "proto3";

package proto;

import "listener.proto";
import "recv.proto";

message SendReq {
  Message msg = 1;
}

message SendRes {}

service Sender {
  rpc Open(OpenReq) returns (OpenRes) {};
  rpc Close(CloseReq) returns (CloseRes) {};

  rpc Send(stream SendReq) returns (SendRes) {};
}